# Copyright (C) 2020-2021 Alexandros Theodotou <alex at zrythm dot org>
#
# This file is part of Zrythm
#
# Zrythm is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Zrythm is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with Zrythm.  If not, see <https://www.gnu.org/licenses/>.

option (
  'meson-path', type: 'string',
  value: 'meson',
  description: 'Full path to meson or meson.py')

option (
  'zrythm-git-ver', type: 'string',
  value: 'master',
  description: 'Git tag/commit')

option (
  'zrythm-pkg-ver', type: 'string',
  value: '1',
  description: 'Version to use in package filenames')

option (
  'zrythm-pkg-semver', type: 'string',
  value: '1',
  description: 'Version to use for Zrythm program')

option (
  'build-trial', type: 'boolean',
  value: false,
  description: 'Whether to build trial packages')

option (
  'zplugins-ver', type: 'string',
  value: '0.2.5',
  description: 'Zplugins version')

option (
  'carla-git-ver', type: 'string',
  value: '1b5f7e9f3509c8af81507470e44fc632591a1cdf',
  description: 'Carla version')

option (
  'lsp-dsp-lib-ver', type: 'string',
  value: '0.5.14',
  description: 'LSP DSP lib version')

option (
  'rcedit-ver', type: 'string',
  value: '1.1.1',
  description: 'RCEdit version')

option (
  'carla-bottle-ver', type: 'string',
  value: '0.1.8',
  description: 'Carla bottle version')

option (
  'locales', type: 'array',
  choices : [
    'en', 'es', 'de', 'fr', 'it', 'ja', 'pt',
    'ru',
    ],
  description: 'Locales for the manual')

option (
  'distro', type: 'combo',
  choices: ['archlinux', 'debian11', 'debian12', 'fedora36', 'windows-msys', 'flatpak', 'gnu-linux', 'osx', 'osx-brew-zip', 'appimage', 'ubuntu2004', 'ubuntu2204', 'user-manual-pdfs' ],
  value: 'archlinux',
  description: 'Distro to build')

option (
  'lv2-ver', type: 'string',
  value: '1.18.0',
  description: 'LV2 version')

option (
  'serd-ver', type: 'string',
  value: '0.30.4',
  description: 'Serd version')

option (
  'sord-ver', type: 'string',
  value: '0.16.4',
  description: 'Sord version')

option (
  'sratom-ver', type: 'string',
  value: '0.6.4',
  description: 'Sratom version')

option (
  'lilv-ver', type: 'string',
  value: '0.24.8',
  description: 'Lilv version')

option (
  'jack-ver', type: 'string',
  value: '1.9.14.r1',
  description: 'JACK version')

option (
  'gtk-ver', type: 'string',
  value: '4.13.0',
  description: 'GTK git version (must be a tag)')

option (
  'libadwaita-ver', type: 'string',
  # 1.3.2
  value: 'dfaf404704a6e4a15d9881fc39ec8a607cd47701',
  description: 'libadwaita git version')

option (
  'libpanel-ver', type: 'string',
  value: '1.3.0-1-for-zrythm',
  description: 'libpanel git version')

option (
  'breeze-icons-ver', type: 'string',
  value: '5.108.0',
  description: 'Breeze icons version to download')

option (
  'breeze-dark-path', type: 'string',
  value: '/Users/alex/.local/share/icons/breeze-dark',
  description: 'Breeze dark icons path')

option (
  'packages-dir', type: 'string',
  value: '/tmp/packages',
  description: 'Dir holding each package (for GNU/Linux zip)')

option (
  'gnu-linux-deps-prefix', type: 'string',
  value: '/home/alex/local-zrythm-deps',
  description: 'Build all dependencies if a FINISHED file does not exist in this dir')

option (
  'osx-deps-prefix', type: 'string',
  value: '/Users/alex/local-zrythm-deps',
  description: 'Build all dependencies if a FINISHED file does not exist in this dir')

option (
  'march_mtune', type: 'string',
  #value: '-march=x86-64-v2 -mtune=haswell', # not supported by old gcc
  # use pentium4 because some users don't have CPUs with SSE3 support
  value: '-march=x86-64 -mtune=intel',
  description: '-march and -mtune flags to pass to the compiler')
